--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "use-filter-select",
   "version": "0.0.0",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc",
+    "preview": "vite preview",
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
     "react": "^17.0.2",
