--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "use-filter-select",
+  "name": "@sushidesu/use-filter-select",
   "version": "0.0.0",
   "license": "MIT",
   "main": "dist/index.js",
+  "author": "sushidesu",
   "files": [
     "dist"
   ],
